#pragma once

class CardCollection
{
public:
    
};
