#pragma once
#include "Card.h"

class ForceBuyCard : Card
{
public:
    int Amount;
};
