#pragma once
#include "Card.h"

class JumpCard : Card
{
public:
    
};
