#pragma once
#include "Card.h"

class NumberCard : Card
{
public:
    int Number;
};
